--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./main.scss:./assets/css/style.css"
+    "sass": "sass --watch ./main.scss:./style.css"
   },
   "repository": {
     "type": "git",
